# JadeMoon

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE
documentation/: grammar.md
src/: main.cpp
src/command_line/: command_line.cpp  command_line.hpp  option.cpp  option.hpp  option_builder.cpp  option_builder.hpp
src/handlers/: source_handler.hpp
src/jmc/: concepts.hpp  types.hpp
src/lexer/: keyword_map.hpp  lexer.cpp  lexer.hpp  source_file_handler.cpp  source_file_handler.hpp
src/parser/: parser.cpp  parser.hpp
src/source/: i_source.hpp  source_file.cpp  source_file.hpp
src/token/: token.cpp  token.hpp  token_kind.hpp
