package(default_visibility = ["//visibility:public"])

default_copts = [
    "-Wall",
    "-Wextra",
    "-Wpedantic",
    "-Wuninitialized",
    "-Wshadow",
    "-Wundef",
    "-Winvalid-pch",
    "-Werror",
    "-O2",
    "-Isrc",
    "-std=c++20",
]

cc_library(
    name = "types",
    hdrs = [
        "src/jmc/types.hpp"
    ],
    copts = default_copts,
)

cc_library(
    name = "i_source",
    hdrs = [
        "src/source/i_source.hpp"
    ],
    deps = [
        "concepts",
    ],
    copts = default_copts,
)

cc_library(
    name = "source_handler",
    hdrs = [
        "src/handlers/source_handler.hpp"
    ],
    deps = [
        "types",
        "i_source",
        "concepts"
    ],
    copts = default_copts,
)

cc_library(
    name = "source_file",
    srcs = [
        "src/source/source_file.cpp"
    ],
    hdrs = [
        "src/source/source_file.hpp"
    ],
    deps = [
        "i_source",
        "types"
    ],
    copts = default_copts,
)

cc_library(
    name = "token",
    srcs = [
        "src/token/token.cpp"
    ],
    hdrs = [
        "src/token/token.hpp",
        "src/token/token_kind.hpp"
    ],
    deps = [
        "types"
    ],
    copts = default_copts,
)

cc_library(
    name = "lexer",
    srcs = [
        "src/lexer/lexer.cpp",
    ],
    hdrs = [
        "src/lexer/lexer.hpp",
        "src/lexer/keyword_map.hpp",
    ],
    deps = [
        "types",
        "i_source",
        "token",
        "source_handler"
    ],
    copts = default_copts,
)

cc_library(
    name = "concepts",
    hdrs = [
        "src/jmc/concepts.hpp"
    ],
    copts = default_copts,
)

cc_library(
    name = "command_line",
    hdrs = [
        "src/command_line/command_line.hpp",
        "src/command_line/option_builder.hpp",
        "src/command_line/option.hpp"
    ],
    srcs = [
        "src/command_line/command_line.cpp",
        "src/command_line/option_builder.cpp",
        "src/command_line/option.cpp"
    ],
    deps = [
        "types",
        "source_handler"
    ],
    copts = default_copts
)

cc_binary(
    name = "jmc",
    srcs = [
        "src/main.cpp"
    ],
    deps = [
        "types",
        "lexer",
        "source_file",
        "command_line"
    ],
    copts = default_copts,
)